--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <div class="experience-details-container">
       <div class="about-containers">
 
-        <div class="details-container color-container">
+        <div class="details-container color-container width-project">
           <div class="article-container">
             <img src="./assets/ecommerce.png" alt="Project 1" class="project-img" />
           </div>
@@ -225,7 +225,7 @@
           </div>
         </div>
 
-        <div class="details-container color-container">
+        <div class="details-container color-container width-project">
           <div class="article-container">
             <img src="./assets/blogapp.png" alt="Project 2" class="project-img" />
           </div>
@@ -242,7 +242,24 @@
           </div>
         </div>
 
-        <div class="details-container color-container">
+        <div class="details-container color-container width-project">
+          <div class="article-container">
+            <img src="./assets/expense.png" alt="Project 2" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Expence Tracker</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/avishkar448/Expense-Tracker'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://willowy-pithivier-16e5ef.netlify.app/'">
+              Live Demo
+            </button>
+          </div>
+        </div>
+
+        <div class="details-container color-container width-project">
           <div class="article-container">
             <img src="./assets/music.png" alt="Project 3" class="project-img" />
           </div>
@@ -259,7 +276,7 @@
           </div>
         </div>
 
-        <div class="details-container color-container">
+        <div class="details-container color-container width-project">
           <div class="article-container">
             <img src="./assets/hotel.png" alt="Project 3" class="project-img" />
           </div>
